# renderingsmipnerf8k

./: .gitignore  Cargo.toml  README.md  build_and_serve.sh  extract.py  extract_double.py  extract_double.py~  index.html
pkg/: mobilenerfxx.d.ts  mobilenerfxx.js  mobilenerfxx_bg.wasm  mobilenerfxx_bg.wasm.d.ts  package.json
src/: blit.wgsl  lib.rs  scene.rs  shader.wgsl
