[package]
name = "mobilenerfxx"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
async-executor = "1.5.1"
bytemuck = { version = "1.13.1", features = ["derive"] }
env_logger = "0.10.0"
glam = "0.24.1"
log = "0.4.20"
pollster = "0.3.0"
wgpu = { version = "0.17.0", features = ["webgl"]}
winit = "0.28.6"
console_error_panic_hook = "0.1.6"
console_log = "1.0"
js-sys = "0.3.64"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4.30"
web-sys = { version = "0.3", features = [
    "Location",
    "Blob",
    "RequestInit",
    "RequestMode",
    "Request",
    "Response",
    "WebGl2RenderingContext",
    "CanvasRenderingContext2d",
    "Document",
    "Window",
    "Element",
    "Performance",
]}
tobj = { version = "4.0.0", features = [ "async" ] }
getrandom = { version = "0.2.10", features = [ "js" ]}
image = "0.24.7"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false
